# digital-paper-parser

./: .gitignore  AGENTS.md  Cargo.toml  check_2026-04-03.py  check_db.py  check_pdf.py  check_today.py  debug_parse.py  gen.sql  monitor_daemon.py  monitor_state.json  network_monitor.py  network_monitor_heartbeat.py  parse_page01.py  parsed_record_2026-03-17.json  parsed_record_2026-03-18.json  parsed_record_2026-03-19.json  parsed_record_2026-03-20.json  parsed_record_2026-03-21.json  parsed_record_2026-03-22.json  parsed_record_2026-03-23.json  parsed_record_2026-03-24.json  parsed_record_2026-03-25.json  parsed_record_2026-03-26.json  parsed_record_2026-03-27.json  parsed_record_2026-03-28.json  parsed_record_2026-03-29.json  parsed_record_2026-03-30.json  parsed_record_2026-03-31.json  parsed_record_2026-04-01.json  parsed_record_2026-04-02.json  parsed_record_2026-04-03.json  report_2026-03-26.txt  report_today.py  run_daily.bat  run_daily_with_monitor.bat  run_monitor.bat  run_network_monitor.bat  run_network_monitor_heartbeat.bat
resource/: check_reporter.py  e_newspaper_hotzone_coords.json  export_article.py  fetch_ftp.py  filter_department.py  find_duplicate.py  kimi_cloud.py  main.py  paper_division.py  search_similar_titles.py  structgpt_hotzone_coords.json  vectorize_titles.py  write_db.py
src/: main.rs
webapp/: app.py  start.bat
