[package]
name = "digital-paper-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
pdf2image = "0.1.3"
image = { version = "0.24", features = ["png", "jpeg"] }
base64 = "0.21"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] } # 处理 HTTP 请求和流式响应
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.8"
